--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
     font-family: 'Roboto';
 }
 
+/* ---------- Side bar ---------- */
+
 .sidebar {
     grid-row: 1 / 3;
     background-color: #3882F6;
@@ -28,33 +30,95 @@ body {
 .nav .branding {
     display: flex;
     gap: 5px;
-    font-size: max(15px, 2vw);
+    font-size: max(12px, 2vw);
     align-items: center;
+}
+
+.secondary div {
+    font-size: max(10px, 1.5vw);
 }
 
 .nav div {
     display: flex;
+    gap: 1.5vw;
     align-items: center;
 }
 
 .nav svg {
-    width: max(25px, 3vw);
+    width: clamp(15px, 2vw, 25px);
 }
 
-svg path {
+.branding svg {
+    width: max(20px, 3vw);
+}
+
+.nav svg path {
     fill: white; 
 }
 
 .nav .secondary {
     display: grid;
-    gap: 5px;
+    gap: 10px;
 }
+
+
+/* ---------- Header ---------- */
 
 .header {
     background-color: white;
     box-shadow: 1px 1px 10px grey;
     position: relative;
+    padding: 10px;
+
+    display: grid;
+    grid-template: 1fr 2fr / 3fr 2fr;
 }
+
+.header .search {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    
+    gap: 3%;
+    align-items: center;
+}
+
+.header .search input {
+    width: 90%;
+    height: 50%;
+    background-color: lightgrey;
+    border: none;
+    border-radius: 15px;
+
+    justify-self: left;
+}
+
+.header .search svg {
+    height: 50%;
+    justify-self: right;
+}
+
+.header .buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    gap: 5%;
+    align-items: center;
+    justify-items: center;
+}
+
+.header .buttons button {
+    background-color: #3882F6;
+    border-radius: 10px;
+    border: none;
+    width: 90%;
+    padding: 5px 0;
+
+    text-align: center;
+    color: white;
+}
+
+
+/* ---------- Main Content ---------- */
 
 .main-content {
     background-color: lightgrey;
